--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,21 +1,21 @@
-<p>
-  signup works!
-</p>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<div class="col-md-3 col-md-offset-4">
-	<div class="panel panel-default">
-	  <div class="panel-body">
-	    <form>
-	      <div class="form-group">
-	        <label for="InputUsername">username</label>
-	        <input type="text" class="form-control" id="InputUsername" placeholder="username" [(ngModel)]="newUser.username" name="username">
-	      </div>
-	      <div class="form-group">
-	        <label for="InputPassword">Password</label>
-	        <input type="password" class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="newUser.password" name="password">
-	      </div>
-	      <button type="submit" class="btn btn-default btn-primary" (click)="signup()">Signup</button>
-	    </form>
-	  </div>
-	</div>
-</div>
+
+    <div class="container">
+          <div class="card card-container">
+              <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+            <br />
+              <form>
+      	      <div class="form-group">
+      	        <label class="label-username" for="InputUsername">Username</label>
+      	        <input type="text" class="form-control"  id="InputUsername" placeholder="Username" [(ngModel)]="newUser.username" name="username">
+      	      </div>
+      	      <div class="form-group">
+      	        <label class="label-password" for="InputPassword">Password</label>
+      	        <input type="password" class="form-control" id="InputPassword" placeholder="Password" [(ngModel)]="newUser.password" name="password">
+      	      </div>
+      	      <button type="submit" class="btn btn-signin btn-default btn-primary" (click)="signup()">Create Account</button>
+      	    </form>
+
+      </div><!-- /card-container -->
+    </div><!-- /container -->
