index layout, login and signup layout

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,12 +1,8 @@
 
-
-
-
-    <div class="container">
-          <div class="card card-container">
-              <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-            <br />
-
+<div class="container-fluid">
+    <div class="card card-container">
+      <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+      <br />
 	    <form>
 	      <div class="form-group">
 	        <label class="label-username" for="InputUsername">username</label>
@@ -19,4 +15,4 @@
 	      <button type="submit" class="btn btn-login btn-default btn-primary" (click)="login()">Login</button>
 	    </form>
     </div><!-- /card-container -->
-  </div><!-- /container -->
+</div><!-- /container -->
