--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,6 +1,6 @@
 
 
-    <div class="container">
+    <div class="container-fluid">
           <div class="card card-container">
               <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
             <br />
@@ -17,4 +17,4 @@
       	    </form>
 
       </div><!-- /card-container -->
-    </div><!-- /container -->
+    </div><!-- /container-fluid -->
