--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,17 +1,12 @@
-<p>
-  index works!
-</p>
+
 <div class="input-group">
-                            <label for="tl">Tech you like</label>
-                            <div class="tag-editor-wrapper">
-                              <input autocomplete="off" class="tag-editor js-tag-editor" data-separator=" " id="tl" maxlength="240" name="tl" placeholder="Add up to 10 (e.g. html, c#)" type="text" value="" style="display: none;">
-                                <div class="tag-editor multi-line" style="width: 388px; height: 33px;"><span></span>
-                                  <input type="text" tabindex="0" placeholder="Add up to 10 (e.g. html, c#)" style="width: 19px;">
-                                  <span></span>
-                                </div>
-                            </div><!-- / tag-editor-wrapper -->
-
-                        </div>
-
-
-                    
+      <h1 class="header">What are your interests?</h1>
+      <br>
+      <div class="tag-editor-wrapper">
+        <input autocomplete="off" class="tag-editor js-tag-editor" data-separator=" " id="tl" maxlength="240" name="tl" placeholder="Add up to 10 (e.g. html, c#)" type="text" value="" style="display: none;">
+          <div class="tag-editor multi-line" ><span></span>
+            <input class="search-container" type="text" tabindex="0" placeholder="Search for interesting tags">
+            <span></span>
+          </div>
+      </div><!-- / tag-editor-wrapper -->
+</div>
