index view, carousel mobile friendly, starting dashboard

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -2,7 +2,7 @@
 .container-fluid{
   display: flex;
   align-items: center;
-  background-color: #752b80;
+  background-color: #6892ca;
   height:100vh; /*100vh*/
   padding-left: 0px;
   padding-right:0px;
