--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,5 +1,12 @@
 /*navbar start*/
 .navbar{
+  z-index:2;
   margin:0;
+}
+.navbar-brand{
+  color:white;
+}
+.navbar-header{
+  background-color: #28586f;
 }
 /*navbar end*/
