--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,11 +1,15 @@
 
+
      <div class="search">
        <label for="search_tags"> search for any hashtag! </label>
        <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
         <button id="search-button" (click)="search()">Search</button>
+
      </div>
+     <div *ngIf=!hidden>
+       <div class="yt">
+         <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" width="560" height="315" allowfullscreen></iframe>
+         <button (click)="next()">Next!</button>
+       </div>
 
-  <p>
-
-  </p>
-<iframe [src]="'https://www.youtube.com/embed/' + testRequestId | safe" width="560" height="315" allowfullscreen></iframe>
+     </div>
