--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,7 +1,18 @@
 /*navbar start*/
 .navbar{
+  width:100vw;
   z-index:2;
-  margin:0;
+  margin:0px;
+  background-color: #28586f;
+}
+ul li span{
+  color: white;
+}
+ul li a{
+    color: white;
+}
+
+.navbar-brand{
 }
 .navbar-brand{
   color:white;
