--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,15 +1,27 @@
+<div class="content-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="side-left col-xs-6 col-sm-2 ">
+      </div><!-- col-xs-12 col-md-10 -->
+      <div class="search-video-cont col-xs-12 col-sm-8 ">
+             <div class="search">
+               <label for="search_tags"> search for any hashtag! </label>
+               <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
+                <button id="search-button" (click)="search()">Search</button>
+             </div><!-- search -->
 
+            <div class="yt-wrapper">
+                <div *ngIf=!hidden><!-- video frame -->
+                   <div class="yt">
+                     <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" allowfullscreen></iframe>
+                     <button (click)="next()">Next!</button>
+                   </div>
+               </div>
+            </div> <!-- video frame -->
+      </div><!-- col-xs-12 col-md-10 -->
 
-     <div class="search">
-       <label for="search_tags"> search for any hashtag! </label>
-       <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
-        <button id="search-button" (click)="search()">Search</button>
-
-     </div>
-     <div *ngIf=!hidden>
-       <div class="yt">
-         <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" width="560" height="315" allowfullscreen></iframe>
-         <button (click)="next()">Next!</button>
-       </div>
-
-     </div>
+      <div class="side-right col-xs-6 col-sm-2 ">
+      </div><!-- col-xs-12 col-md-10 -->
+    </div><!-- row -->
+  </div><!-- container -->
+</div><!-- content-wrapper -->
