--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,27 +1,58 @@
 <div class="content-wrapper">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="side-left col-xs-6 col-sm-2 ">
-      </div><!-- col-xs-12 col-md-10 -->
-      <div class="search-video-cont col-xs-12 col-sm-8 ">
-             <div class="search">
-               <label for="search_tags"> search for any hashtag! </label>
-               <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
-                <button id="search-button" (click)="search()">Search</button>
-             </div><!-- search -->
+      <div class="side-left col-xs-12 col-sm-3 ">
+        <div class="left side">
+          <h5>Your search:</h5>
+          <ul>
+            <li>tag #1</li>
+            <li>tag #2</li>
+            <li>tag #3</li>
+            <li>tag #4</li>
+          </ul>
+        </div><!-- left side-->
+      </div><!-- side-left col-xs-12 col-sm-2 -->
 
-            <div class="yt-wrapper">
-                <div *ngIf=!hidden><!-- video frame -->
-                   <div class="yt">
-                     <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" allowfullscreen></iframe>
-                     <button (click)="next()">Next!</button>
-                   </div>
-               </div>
-            </div> <!-- video frame -->
-      </div><!-- col-xs-12 col-md-10 -->
+      <div class="search-video-cont col-xs-12 col-sm-6 ">
+        <div class="search">
+          <h2>search for any hashtag!</h2>
+          <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
+          <button class="search-btn" id="search-button" (click)="search()">Search</button>
+          <button class="search-btn" (click)="next()">Next!</button>
+        </div><!-- search -->
 
-      <div class="side-right col-xs-6 col-sm-2 ">
+        <div class="yt-wrapper">
+          <div *ngIf=hidden><!-- video frame -->
+              <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" allowfullscreen></iframe>
+          </div>
+        </div> <!-- yt-wrapper -->
       </div><!-- col-xs-12 col-md-10 -->
+      <div class="col-xs-12 col-sm-3 ">
+        <div class="row">
+          <div class="side-right col-xs-6 col-sm-6 ">
+            <div class="popular-tags">
+              <h5>Trending tags:</h5>
+              <ul>
+                <li>Weapons</li>
+                <li>Mechanical keyboards</li>
+                <li>Nikes</li>
+                <li>Elephants</li>
+              </ul>
+            </div><!-- popular-tag -->
+          </div><!-- side-right col-xs-12 col-sm-2 -->
+          <div class="side-right col-xs-6 col-sm-6 ">
+            <div class="popular-tags">
+              <h5>Most popular tags:</h5>
+              <ul>
+                <li>Trump</li>
+                <li>Mechanical keyboards</li>
+                <li>Dogs</li>
+                <li>Rubiks cube</li>
+              </ul>
+            </div><!-- popular-tag -->
+          </div><!-- side-right col-xs-12 col-sm-2 -->
+        </div><!-- row -->
+      </div><!-- col-xs-12 col-sm-2 -->
     </div><!-- row -->
   </div><!-- container -->
 </div><!-- content-wrapper -->
