--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -1,5 +1,30 @@
-<p>
-  reddit works!
-</p>
 
-{{reddit.data.title}}
+
+<div class="reddit-content">
+  <h5><a href="https://reddit.com/{{reddit.data.permalink}}">{{reddit.data.title}}
+  </a></h5>
+  <div class="foot">
+    <div>
+
+      <a href="{{reddit.data.url}}"><img class="pic" src="{{reddit.data.preview.images[0].source.url}}" alt="/assets/images/reddit.png"/></a>
+    </div>
+    <div id="right">
+
+        <div>
+          <a href="https://reddit.com/{{reddit.data.subreddit_name_prefixed}}">{{reddit.data.subreddit_name_prefixed}}</a>
+        </div>
+        <div>
+          <p>
+            submitted by <a href="https://reddit.com/u/{{reddit.data.author}}">{{reddit.data.author}}</a> on {{reddit.data.created | date}}
+          </p>
+        </div>
+
+    </div>
+
+
+  </div>
+  <!-- <div *ngIf="reddit.data.post_hint == 'image'"> -->
+
+  <!-- </div> -->
+
+</div>
