content view just youtube

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -22,7 +22,7 @@
         </div><!-- search -->
 
         <div class="yt-wrapper">
-          <div *ngIf=hidden><!-- video frame -->
+          <div *ngIf=!hidden><!-- video frame -->
               <iframe [src]="'https://www.youtube.com/embed/' + videoId | safe" allowfullscreen></iframe>
           </div>
         </div> <!-- yt-wrapper -->
