--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -10,7 +10,7 @@
 </div><!-- / carousel container slide -->
 <div class="input-wrapper">
     <div class="input-group">
-          <h1 class="header">What are your interests?</h1>
+          <a href="content"><h1 class="header">What are your interests?</h1></a>
 
             <input autocomplete="off" class="tag-editor js-tag-editor" data-separator=" " id="tl" maxlength="240" name="tl" placeholder="Add up to 10 (e.g. html, c#)" type="text" value="" style="display: none;">
               <div class="tag-editor multi-line" >
@@ -19,5 +19,3 @@
               </div>
     </div><!-- / input-group -->
 </div><!-- / input-wrapper -->
-
-
