--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  dashboard works!
-</p>
+<div class="main-content">
+ <h2>Dashboard!!</h2>
+ <button (click)="edit()">edit profile</button><button (click)="delete()">delete profile</button>
+</div>
+<!-- <li *ngFor="let item of generateArray(user)">{{item.key}}: {{item.value}}</li>
+{{user}} -->
+<div *ngIf="displayEdit">
+  <!-- <app-edit [edit-info]="user"></app-edit> -->
+</div>
