--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -10,8 +10,10 @@
             <li>tag #3</li>
             <li>tag #4</li>
           </ul>
-        </div><!-- left side-->
-      </div><!-- side-left col-xs-12 col-sm-2 -->
+        </div>
+        <!-- left side-->
+      </div>
+      <!-- side-left col-xs-12 col-sm-2 -->
 
       <div class="search-video-cont col-xs-12 col-sm-6 ">
         <div class="search">
@@ -19,79 +21,104 @@
           <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
           <button class="search-btn" id="search-button" (click)="search()">Search</button>
           <button class="search-btn" (click)="next()">Next!</button>
-        </div><!-- search -->
+        </div>
+        <!-- search -->
 
-      <!-- youtube start -->
+        <!-- youtube start -->
         <div *ngIf=!hidden>
           <div class="yt-wrapper">
-              <div *ngIf="!isLoadingYt">
-                <p>
-                  loading
-                </p>
-              </div>
-              <div *ngIf="isLoadingYt">
-                <app-youtube [video]=videoId></app-youtube>
-              </div>  <!-- ngif loading -->
-          </div> <!-- yt-wrapper -->
-    <!-- youtube end -->
-    <!-- twitter start  -->
-            <div class="tw">
-              <div *ngIf="!isLoadingTweet">
-                <p>
-                  loading
-                </p>
-              </div>
-              <div *ngIf="isLoadingTweet">
-                <app-tweet  [tweet]=tweet></app-tweet>
-              </div>
+            <div *ngIf="!isLoadingYt">
+              <p>
+                loading
+              </p>
             </div>
-    <!-- twitter end  -->
-    <!-- reddit start -->
-            <div class="reddit">
-              <div *ngIf="!isLoadingReddit">
-                <p>
-                  loading
-                </p>
-              </div>
-              <div *ngIf="isLoadingReddit">
-                <app-reddit  [reddit]=reddit></app-reddit>
-              </div>
+            <div *ngIf="isLoadingYt">
+              <app-youtube [video]=videoId></app-youtube>
             </div>
-  <!-- REDDIT END -->
+            <!-- ngif loading -->
           </div>
-        </div><!-- col-xs-12 col-md-10 -->
+          <!-- yt-wrapper -->
+          <!-- youtube end -->
+          <!-- twitter start  -->
+          <div class="tw">
+            <div *ngIf="!isLoadingTweet">
+              <p>
+                loading
+              </p>
+            </div>
+            <div *ngIf="isLoadingTweet">
+              <app-tweet [tweet]=tweet></app-tweet>
+            </div>
+          </div>
+          <!-- twitter end  -->
+          <!-- reddit start -->
+          <div class="reddit">
+            <div *ngIf="!isLoadingReddit">
+              <p>
+                loading
+              </p>
+            </div>
+            <div *ngIf="isLoadingReddit">
+              <app-reddit [reddit]=reddit></app-reddit>
+            </div>
+          </div>
+          <!-- REDDIT END -->
+          <!-- Tumblr -->
+          <div class="tumblr">
+            <div *ngIf="!isLoadingTumblr">
+              <p>
+                loading
+              </p>
+            </div>
+            <div *ngIf="isLoadingTumblr">
+              <app-tumblr [tumblr]=tumblr></app-tumblr>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- col-xs-12 col-md-10 -->
 
 
 
 
-        <div class="side-right col-xs-6 col-sm-2 ">
-        </div><!-- col-xs-12 col-md-10 -->
-        <div class="col-xs-12 col-sm-3 ">
-          <div class="row">
-            <div class="side-right col-xs-6 col-sm-6 ">
-              <div class="popular-tags">
-                <h5>Trending tags:</h5>
-                <ul>
-                  <li>Weapons</li>
-                  <li>Mechanical keyboards</li>
-                  <li>Nikes</li>
-                  <li>Elephants</li>
-                </ul>
-              </div><!-- popular-tag -->
-            </div><!-- side-right col-xs-12 col-sm-2 -->
-            <div class="side-right col-xs-6 col-sm-6 ">
-              <div class="popular-tags">
-                <h5>Most popular tags:</h5>
-                <ul>
-                  <li>Trump</li>
-                  <li>Mechanical keyboards</li>
-                  <li>Dogs</li>
-                  <li>Rubiks cube</li>
-                </ul>
-              </div><!-- popular-tag -->
-            </div><!-- side-right col-xs-12 col-sm-2 -->
-          </div><!-- row -->
-        </div><!-- col-xs-12 col-sm-2 -->
-      </div><!-- row -->
-    </div><!-- container -->
-  </div><!-- content-wrapper -->
+      <div class="side-right col-xs-6 col-sm-2 ">
+      </div>
+      <!-- col-xs-12 col-md-10 -->
+      <div class="col-xs-12 col-sm-3 ">
+        <div class="row">
+          <div class="side-right col-xs-6 col-sm-6 ">
+            <div class="popular-tags">
+              <h5>Trending tags:</h5>
+              <ul>
+                <li>Weapons</li>
+                <li>Mechanical keyboards</li>
+                <li>Nikes</li>
+                <li>Elephants</li>
+              </ul>
+            </div>
+            <!-- popular-tag -->
+          </div>
+          <!-- side-right col-xs-12 col-sm-2 -->
+          <div class="side-right col-xs-6 col-sm-6 ">
+            <div class="popular-tags">
+              <h5>Most popular tags:</h5>
+              <ul>
+                <li>Trump</li>
+                <li>Mechanical keyboards</li>
+                <li>Dogs</li>
+                <li>Rubiks cube</li>
+              </ul>
+            </div>
+            <!-- popular-tag -->
+          </div>
+          <!-- side-right col-xs-12 col-sm-2 -->
+        </div>
+        <!-- row -->
+      </div>
+      <!-- col-xs-12 col-sm-2 -->
+    </div>
+    <!-- row -->
+  </div>
+  <!-- container -->
+</div>
+<!-- content-wrapper -->
