--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -1,6 +1,18 @@
 
-<div class="twitter-tweet" [innerHTML]= "tweet['text'] | twitter">
+<div class="tweet-wrapper container-fluid">
+  <div class="row">
 
-</div>
-<p>&mdash; {{tweet["user"].name}} @{{tweet["user"].screen_name }}</p>
-<a target= "_blank" href="https://twitter.com/{{this.tweet['user'].id_str}}/status/{{this.tweet['id_str']}}">{{tweet["created_at"] | date}}</a>
+      <div class="right-tweet-content col-xs-12 col-sm-12">
+            <div class="username-date-wrapper">
+              <img class="twitter-pic" src="{{tweet['user'].profile_image_url}}" >
+              <p class="twitter-username"> {{tweet["user"].name}} </p>
+              <p class="twitter-handle">@{{tweet["user"].screen_name }} </p>
+              <br>
+              <a class="date" target= "_blank" href="https://twitter.com/{{this.tweet['user'].id_str}}/status/{{this.tweet['id_str']}}">{{tweet["created_at"] | date}}</a>
+            </div><!-- username-date-wrapper -->
+
+            <div class="twitter-tweet" [innerHTML]= "tweet['text'] | twitter">
+            </div><!-- twitter-tweet -->
+      </div><!-- right-tweet-content col-xs-10 col-sm-10 -->
+    </div><!-- row -->
+</div><!-- tweet-wrapper -->
