--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -6,9 +6,7 @@ div{
   padding-right:0px;
 }
 .content-wrapper{
-
   width:100vw;
-
 }
 .search-video-cont{
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -81,27 +79,33 @@ li{
 }
 /*side bar END*/
 
-/*youtube video*/
+/*youtube START*/
 .yt-wrapper{
+
   width:100%;
   height:auto;
   display: flex;
   justify-content: center;
   padding: 10px;
-  border: 1px dotted black;
+   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+margin-top:10px;
 }
+/*youtube END*/
+/*TWEET START*/
 
-iframe{
-
-/*normal size:*/
-  width:504px;
-  height:283px;
-  max-width:100%;
-  max-height: 30vh;
-
-  /*max-width:85vw;*/
-  /*height:auto;
-  width:504px;*/
-
-
+.tweet-wrapper{
+   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  padding: 10px;
+  margin-top:10px;
+  /*border: 2px dotted red;*/
 }
+/*TWEET END*/
+
+/*REDDIT START*/
+.reddit-wrapper{
+   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  padding: 10px;
+  margin-top:10px;
+  /*border: 2px dotted green;*/
+}
+/*REDDIT END*/
