--- a/src/app/youtube/youtube.component.html
+++ b/src/app/youtube/youtube.component.html
@@ -1,2 +1,3 @@
 
 <iframe [src]="'https://www.youtube.com/embed/' + video | safe"  width="560" height="315" allowfullscreen></iframe>
+<button (click)="save(video)">save</button>
