twitter and reddit looking sweet

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -2,7 +2,7 @@
 .container-fluid{
   display: flex;
   align-items: center;
-  background-color: #28586f;
+  background-color: #161f42;
   height:100vh; /*100vh*/
   padding-left: 0px;
   padding-right:0px;
