--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -6,19 +6,16 @@
           <h5>Your search:</h5>
           <ul>
             <li>tag #1</li>
-            <li>tag #2</li>
-            <li>tag #3</li>
-            <li>tag #4</li>
           </ul>
         </div><!-- left side-->
       </div><!-- side-left col-xs-12 col-sm-2 -->
 
       <div class="search-video-cont col-xs-12 col-sm-8 ">
         <div class="search">
-          <h2>search for any hashtag!</h2>
+          <h3>search for tags</h3>
           <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
           <button class="search-btn" id="search-button" (click)="search()">Search</button>
-          <button class="search-btn" (click)="next()">Next!</button>
+          <button class="search-btn" (click)="next()">More!</button>
         </div><!-- search -->
 
         <!-- youtube start -->
