--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -11,8 +11,16 @@
 <div *ngIf="favorites.length>0">
   <div *ngFor="let favorite of favoritesData">
     <div *ngIf="favorite.content.source == 'YOUTUBE'">
-      <app-youtube [video]=favorite.content.data.video (onFavorite)="next1($event)"></app-youtube>
+      <app-youtube [video]=favorite.content.data.video ></app-youtube>
     </div>
-
+    <div *ngIf="favorite.content.source == 'TWITTER'">
+      <app-tweet [tweet]=favorite.content.data.tweet ></app-tweet>
+    </div>
+    <div *ngIf="favorite.content.source == 'REDDIT'">
+        <app-reddit [reddit]=favorite.content.data.reddit ></app-reddit>
+    </div>
+    <div *ngIf="favorite.content.source == 'TUMBLR'">
+        <app-tumblr [tumblr]=favorite.content.data.tumblr ></app-tumblr>
+    </div>
   </div>
 </div>
