--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -27,3 +27,5 @@
   </div><!-- reddit-info-wrapper -->
 </div><!-- reddi-content-wrapper -->
 
+<button (click)="save(reddit)">save</button>
+<button (click)="onQuote()">wat</button>
