--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -45,7 +45,7 @@
               </p>
             </div>
             <div *ngIf="isLoadingTweet">
-              <app-tweet [tweet]=tweet></app-tweet>
+              <app-tweet [tweet]=tweet (onFavorite)="next1($event)"></app-tweet>
             </div>
           </div>
           <!-- twitter end  -->
@@ -57,7 +57,7 @@
               </p>
             </div>
             <div *ngIf="isLoadingReddit">
-              <app-reddit [reddit]=reddit></app-reddit>
+              <app-reddit [reddit]=reddit (onFavorite)="next1($event)"></app-reddit>
             </div>
           </div>
           <!-- REDDIT END -->
@@ -69,7 +69,7 @@
               </p>
             </div>
             <div *ngIf="isLoadingTumblr">
-              <app-tumblr [tumblr]=tumblr></app-tumblr>
+              <app-tumblr [tumblr]=tumblr (onFavorite)="next1($event)"></app-tumblr>
             </div>
           </div>
         </div>
