--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -109,3 +109,9 @@ margin-top:10px;
   /*border: 2px dotted green;*/
 }
 /*REDDIT END*/
+.tumblr-wrapper{
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  padding: 10px;
+  margin-top:10px;
+  /*border: 2px dotted red;*/
+}
