--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -62,7 +62,7 @@
           </div>
           <!-- REDDIT END -->
           <!-- Tumblr -->
-          <div class="tumblr">
+          <div class="tumblr-wrapper">
             <div *ngIf="!isLoadingTumblr">
               <p>
                 loading
@@ -70,14 +70,12 @@
             </div>
             <div *ngIf="isLoadingTumblr">
               <app-tumblr [tumblr]=tumblr></app-tumblr>
-            </div>
-          </div>
+            </div><!-- isloadingTumblr -->
+          </div><!-- tumblr-wrapper -->
         </div>
       </div>
       <!-- col-xs-12 col-md-10 -->
-      <div class="side-right col-xs-6 col-sm-2 ">
-      </div>
-      <!-- col-xs-12 col-md-10 -->
+      
       <div class="col-xs-12 col-sm-3 ">
         <div class="row">
           <div class="side-right col-xs-6 col-sm-6 ">
