--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <!-- col-xs-12 col-md-10 -->
-      
+
       <div class="col-xs-12 col-sm-3 ">
         <div class="row">
           <div class="side-right col-xs-6 col-sm-6 ">
@@ -108,10 +108,9 @@
             <div class="popular-tags">
               <h5>Most popular tags:</h5>
               <ul>
-                <li>Trump</li>
-                <li>Mechanical keyboards</li>
-                <li>Dogs</li>
-                <li>Rubiks cube</li>
+                <li *ngFor="let pop of popular">
+                  <a (click)="searchThis(pop.substring(1))">{{pop}}</a>
+                </li>
               </ul>
             </div><!-- popular-tag -->
           </div><!-- side-right col-xs-12 col-sm-2 -->
