--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -15,7 +15,7 @@ div{
   margin:0px;
   padding-left: 0px;
   padding-right:0px;
-
+  margin-bottom: 10px;
   /*background-color:rgba(255, 0, 0, 0.1);*/
 }
 .row{
@@ -37,9 +37,7 @@ input{
 }
 .search-btn{
   width: 100%;
-    /*background-color: #4d90fe; */
-    background-color: rgb(104, 145, 162);
-    /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
+    background-color: #d27983;
     padding: 0px;
     font-weight: 700;
     font-size: 16px;
@@ -76,6 +74,14 @@ li{
   padding-left: 10px;
   padding-right:5px;
   /*background-color:rgba(200, 110, 0, 0.2);*/
+}
+.popular-tags{
+  margin-bottom: 10px;
+}
+.trending-tags{
+  display: inline-flex;
+  margin-right: 10px;
+
 }
 /*side bar END*/
 
