--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -76,48 +76,47 @@ li{
   /*background-color:rgba(200, 110, 0, 0.2);*/
 }
 .popular-tags{
-  margin-bottom: 10px;
+
 }
 .trending-tags{
   display: inline-flex;
   margin-right: 10px;
-
 }
 /*side bar END*/
 
 /*youtube START*/
 .yt-wrapper{
-
   width:100%;
   height:auto;
   display: flex;
   justify-content: center;
   padding: 10px;
-   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
-margin-top:10px;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  margin-top:10px;
 }
 /*youtube END*/
 /*TWEET START*/
 
 .tweet-wrapper{
-   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
-  /*border: 2px dotted red;*/
 }
 /*TWEET END*/
 
 /*REDDIT START*/
 .reddit-wrapper{
-   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
-  /*border: 2px dotted green;*/
 }
 /*REDDIT END*/
+
+/*TUMBLR START*/
 .tumblr-wrapper{
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
   /*border: 2px dotted red;*/
 }
+/*TUMBLR END*/
