x remove in dashboard

--- a/src/app/auth/dashboard/dashboard.component.css
+++ b/src/app/auth/dashboard/dashboard.component.css
@@ -1,3 +1,35 @@
+.edit-button{
+  border:0px;
+  background-color: #d27983;
+}
+.delete-button{
+  border:0px;
+  background-color: #d27983;
+}
+.remove-yt{
+  color: #d27983;
+  position:relative;
+}
+.remove-tw{
+  color: #d27983;
+  position:relative;
+}
+.remove-re{
+  color: #d27983;
+  position:relative;
+}
+.remove-tu{
+  color: #d27983;
+  position:relative;
+}
+.content{
+  display:flex;
+  justify-content: center;
+}
+.content-wrapper{
+  max-width:800px;
+
+}
 /*youtube START*/
 .yt-wrapper{
   width:100%;
@@ -12,6 +44,7 @@
 
 /*TWEET START*/
 .tweet-wrapper{
+  display:flex;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
@@ -20,6 +53,7 @@
 
 /*REDDIT START*/
 .reddit-wrapper{
+  display:flex;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
@@ -31,6 +65,6 @@
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 30px rgba(0, 0, 0, 0.1) ;
   padding: 10px;
   margin-top:10px;
-  
+  display:flex;
 }
 /*TUMBLR END*/
