--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -15,5 +15,5 @@
       </div><!-- right-tweet-content col-xs-10 col-sm-10 -->
     </div><!-- row -->
 </div><!-- tweet-wrapper -->
-<button (click)="save(tweet)">save</button>
-<button (click)="onQuote()">wat</button>
+<button class="save-button" (click)="save(tweet)">save</button>
+<button class="save-button" (click)="onQuote()">wat</button>
