--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -1,26 +1,39 @@
 <div class="main-content">
  <h2>Dashboard!!</h2>
- <button (click)="edit()">edit profile</button><button (click)="delete()">delete profile</button>
+ <button class="edit-button" (click)="edit()">edit profile</button><button class="delete-button" (click)="delete()">delete profile</button>
 </div>
 <!-- <li *ngFor="let item of generateArray(user)">{{item.key}}: {{item.value}}</li>
 {{user}} -->
 <div *ngIf="displayEdit">
   <!-- <app-edit [edit-info]="user"></app-edit> -->
 </div>
-<hr>
-<div *ngIf="favorites.length>0">
-  <div *ngFor="let favorite of favoritesData">
-    <div class="yt-wrapper" *ngIf="favorite.content.source == 'YOUTUBE'">
-      <app-youtube [video]=favorite.content.data.video ></app-youtube>
-    </div>
-    <div class="tweet-wrapper" *ngIf="favorite.content.source == 'TWITTER'">
-      <app-tweet [tweet]=favorite.content.data.tweet ></app-tweet>
-    </div>
-    <div class="reddit-wrapper" *ngIf="favorite.content.source == 'REDDIT'">
-        <app-reddit [reddit]=favorite.content.data.reddit ></app-reddit>
-    </div>
-    <div class="tumblr-wrapper" *ngIf="favorite.content.source == 'TUMBLR'">
-        <app-tumblr [tumblr]=favorite.content.data.tumblr ></app-tumblr>
-    </div>
-  </div>
-</div>
+<div class="content">
+    <div class="content-wrapper" *ngIf="favorites.length>0">
+      <div *ngFor="let favorite of favoritesData">
+        <div class="youtube-dash">
+          <div class="yt-wrapper" *ngIf="favorite.content.source == 'YOUTUBE'">
+            <app-youtube [video]=favorite.content.data.video ></app-youtube>
+              <a class="remove-yt"(click)="remove()"><span class="glyphicon glyphicon-remove"></span></a>
+          </div>
+        </div><!-- youtube-dash -->
+        <div class="twitter-dash">
+          <div class="tweet-wrapper" *ngIf="favorite.content.source == 'TWITTER'">
+            <app-tweet [tweet]=favorite.content.data.tweet ></app-tweet>
+            <a class="remove-tw"(click)="remove()"><span class="glyphicon glyphicon-remove"></span></a>
+          </div>
+        </div><!-- twitter-dash -->
+        <div class="reddit-dash">
+          <div class="reddit-wrapper" *ngIf="favorite.content.source == 'REDDIT'">
+              <app-reddit [reddit]=favorite.content.data.reddit ></app-reddit>
+              <a class="remove-re"(click)="remove()"><span class="glyphicon glyphicon-remove"></span></a>
+          </div>
+        </div><!-- reddit-dash -->
+        <div class="tumblr-dash">
+          <div class="tumblr-wrapper" *ngIf="favorite.content.source == 'TUMBLR'">
+              <app-tumblr [tumblr]=favorite.content.data.tumblr ></app-tumblr>
+              <a class="remove-tu"(click)="remove()"><span class="glyphicon glyphicon-remove"></span></a>
+          </div>
+        </div><!-- tumblr-dash -->
+      </div><!-- *ngFor -->
+    </div><!-- content-wrapper *ngIf -->
+</div><!-- content -->
