--- a/src/app/reddit/reddit.component.css
+++ b/src/app/reddit/reddit.component.css
@@ -1,4 +1,6 @@
 .reddit-pic-wrapper {
+  max-width:200px;
+  
   flex: 1;
 }
 .reddit-info-wrapper {
@@ -23,4 +25,12 @@ h4{
 }
 a{
   color: #3a7baf;
+}
+.save-button{
+  border:0px;
+  background-color: #d27983;
+}
+.wat-button{
+  border:0px;
+  background-color: #d27983;
 }
