--- a/src/app/tumblr/tumblr.component.html
+++ b/src/app/tumblr/tumblr.component.html
@@ -21,5 +21,5 @@
   </div><!-- content-wrapper -->
 </div><!-- tumblr-wrapper -->
 
-<button (click)="save(tumblr)">save</button>
-<button (click)="onQuote()">wat</button>
+<button class="save-button" (click)="save(tumblr)">save</button>
+<button class="save-button" (click)="onQuote()">wat</button>
