--- a/src/app/tweet/tweet.component.css
+++ b/src/app/tweet/tweet.component.css
@@ -1,3 +1,11 @@
+.save-button{
+  border:0px;
+  background-color: #d27983;
+}
+.wat-button{
+  border:0px;
+  background-color: #d27983;
+}
 /*left side -- profile pic START*/
 .left-profile-pic{
   padding-right: 10px;
