--- a/src/app/youtube/youtube.component.html
+++ b/src/app/youtube/youtube.component.html
@@ -1,4 +1,4 @@
 
 <iframe [src]="'https://www.youtube.com/embed/' + video | safe"  width="560" height="315" allowfullscreen></iframe>
-<button (click)="save(video)">save</button>
-<button (click)="onQuote()">wat</button>
+<button class="save-button" (click)="save(video)">save</button>
+<button class="wat-button" (click)="onQuote()">wat</button>
