--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -3,9 +3,11 @@
     <div class="row">
       <div class="side-left col-xs-12 col-sm-3 ">
         <div class="left side">
-          <h5>Your search:</h5>
+          <h5>Your searches:</h5>
           <ul>
-            <li>tag #1</li>
+            <li *ngFor="let search of searches">
+              <a (click)="searchThis(search)">{{search}}</a>
+            </li>
           </ul>
         </div>
         <!-- left side-->
