--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
         <li *ngIf="!this.session.isAuth"><a [routerLink]="['/signup']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li *ngIf="!this.session.isAuth"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <li *ngIf="this.session.isAuth"><a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-        <li *ngIf="this.session.isAuth"><a href ="dashboard"><span class="glyphicon glyphicon-pushpin"></span> My dashboard</a></li>
+        <li *ngIf="this.session.isAuth"><a [routerLink] ="['/dashboard']"><span class="glyphicon glyphicon-pushpin"></span> My dashboard</a></li>
 
       </ul>
     </div>
