--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -27,5 +27,7 @@
   </div><!-- reddit-info-wrapper -->
 </div><!-- reddi-content-wrapper -->
 
-<button class="save-button" (click)="save(reddit)">save</button>
-<button class="save-button" (click)="onQuote()">wat</button>
+<div *ngIf="showButtons">
+  <button class="save-button" (click)="save(reddit)">save</button>
+  <button class="wat-button" (click)="onQuote()">wat</button>
+</div>
