--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -15,5 +15,8 @@
       </div><!-- right-tweet-content col-xs-10 col-sm-10 -->
     </div><!-- row -->
 </div><!-- tweet-wrapper -->
-<button class="save-button" (click)="save(tweet)">save</button>
-<button class="save-button" (click)="onQuote()">wat</button>
+
+<div *ngIf="showButtons">
+  <button class="save-button" (click)="save(tweet)">save</button>
+  <button class="wat-button" (click)="onQuote()">wat</button>
+</div>
